[gd_scene load_steps=2 format=2]

[ext_resource path="res://Script/Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.25 )

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_right = 0.15
anchor_bottom = 1.0
alignment = 1

[node name="Resume" type="Button" parent="Buttons"]
margin_top = 230.0
margin_right = 153.0
margin_bottom = 250.0
disabled = true
text = "Resume"

[node name="NewGame" type="Button" parent="Buttons"]
margin_top = 254.0
margin_right = 153.0
margin_bottom = 274.0
text = "New Game"

[node name="Save" type="Button" parent="Buttons"]
margin_top = 278.0
margin_right = 153.0
margin_bottom = 298.0
disabled = true
text = "Save"

[node name="Load" type="Button" parent="Buttons"]
margin_top = 302.0
margin_right = 153.0
margin_bottom = 322.0
text = "Load"

[node name="Options" type="Button" parent="Buttons"]
margin_top = 326.0
margin_right = 153.0
margin_bottom = 346.0
text = "Options"

[node name="Quit" type="Button" parent="Buttons"]
margin_top = 350.0
margin_right = 153.0
margin_bottom = 370.0
text = "Quit"

[node name="TabContainer" type="TabContainer" parent="."]
visible = false
anchor_left = 0.15
anchor_right = 1.0
anchor_bottom = 1.0
tab_align = 0
tabs_visible = false

[node name="Save" type="Control" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Label" type="Label" parent="TabContainer/Save"]
anchor_left = 0.025
anchor_top = 0.046
anchor_right = 0.025
anchor_bottom = 0.046
margin_right = 51.0
margin_bottom = 14.0
text = "Save"

[node name="Load" type="Control" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Label" type="Label" parent="TabContainer/Load"]
anchor_left = 0.025
anchor_top = 0.046
anchor_right = 0.025
anchor_bottom = 0.046
margin_right = 51.0
margin_bottom = 14.0
text = "Load"

[node name="Options" type="Control" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Label" type="Label" parent="TabContainer/Options"]
anchor_left = 0.025
anchor_top = 0.046
anchor_right = 0.025
anchor_bottom = 0.046
margin_right = 51.0
margin_bottom = 14.0
text = "Options"

[connection signal="pressed" from="Buttons/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Buttons/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Buttons/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="button_down" from="Buttons/Quit" to="." method="_on_Quit_button_down"]
